--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -66,17 +66,20 @@
     h4 {
         font-weight: 600;
         font-size: 1.25rem;
+        text-align: left;
     }
 
     h5 {
         font-weight: 600;
         font-size: 1rem;
+        text-align: left;
     }
 
     h6 {
         font-weight: 600;
         font-size: 0.875rem;
         color: #777;
+        text-align: left;
     }
 
     p {
